--- a/package.json
+++ b/package.json
@@ -52,12 +52,17 @@
             "vaul": "^1.1.2"
       },
       "devDependencies": {
+            "@commitlint/cli": "^19.8.1",
+            "@commitlint/config-conventional": "^19.8.1",
             "@types/node": "^20.10.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "husky": "^9.1.7",
             "vite": "6.3.5"
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build"
+            "build": "vite build",
+            "prepare": "husky",
+            "check:changelog": "node scripts/check-changelog.js"
       }
 }
