--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
       "dependencies": {
             "@ant-design/icons": "^6.0.2",
             "@ant-design/x": "^1.6.1",
+            "@fortawesome/fontawesome-free": "^7.1.0",
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
             "@radix-ui/react-aspect-ratio": "^1.1.2",
