--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
       "name": "项目管理",
-      "version": "0.1.0",
+      "version": "0.1.1",
       "private": true,
       "dependencies": {
             "@ant-design/icons": "^6.0.2",
@@ -56,6 +56,8 @@
             "@commitlint/cli": "^19.8.1",
             "@commitlint/config-conventional": "^19.8.1",
             "@types/node": "^20.10.0",
+            "@types/react": "^19.2.2",
+            "@types/react-dom": "^19.2.2",
             "@vitejs/plugin-react-swc": "^3.10.2",
             "husky": "^9.1.7",
             "vite": "6.3.5"
